# battery-esp-bq24074

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
.github/: copilot-instructions.md
agent/: design.md
examples/basic/: CMakeLists.txt  main.c
examples/basic/main/: idf_component.yml
host_test/: CMakeLists.txt  test_bq24074_config.c
host_test/stubs/: battery_charge_percent.h  esp_err.h
host_test/stubs/driver/: gpio.h
host_test/stubs/freertos/: FreeRTOS.h
include/: bq24074_driver.h
src/: bq24074_driver.c
